# emgio

./: .coverage  .gitignore  README.md  emgio.code-workspace  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
emgio/: __init__.py
emgio/core/: emg.py
emgio/exporters/: edf.py
emgio/importers/: base.py  edf.py  otb.py  trigno.py
emgio/tests/: test_core.py  test_exporters.py  test_importers.py
examples/: otb_emg_channels.tsv  otb_example.py  trigno_emg.edf  trigno_emg_channels.tsv  trigno_example.ipynb  trigno_example.py  trigno_sample_header.csv  truncated_trigno_sample.csv
